# limbo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Limbo.sln  Limbo.vcxproj  README.md  build.bat  build.ps1  build.sh  imgui.ini  limbo.sln  limbo.vcxproj  limbo.vcxproj.filters  premake5.lua  testlog.txt
apps/editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.hpp  EditorUtils.hpp  PrefabStage.cpp  PrefabStage.hpp  main.cpp
apps/editor/commands/: Command.hpp  CommandHistory.cpp  CommandHistory.hpp  EntityCommands.hpp  PropertyCommands.hpp
apps/editor/gizmos/: Gizmo.cpp  Gizmo.hpp
apps/editor/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.hpp  AssetPipelinePanel.cpp  AssetPipelinePanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  PrefabOverridesPanel.cpp  PrefabOverridesPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ScriptDebugPanel.cpp  ScriptDebugPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
apps/sandbox/: CMakeLists.txt  main.cpp
apps/sandbox/assets/scenes/: scene.json
apps/sandbox/assets/scripts/: gameplay_demo.lua  platformer_player.lua  player.lua
apps/sandbox/assets/shaders/: sprite.frag  sprite.vert
engine/: CMakeLists.txt
engine/include/limbo/: Limbo.hpp
engine/include/limbo/animation/: Animation.hpp  AnimationSystem.hpp  AnimatorComponent.hpp  SpriteSheet.hpp
engine/include/limbo/assets/: Asset.hpp  AssetId.hpp  AssetImporter.hpp  AssetLoader.hpp  AssetManager.hpp  AssetRegistry.hpp  AudioAsset.hpp  FileWatcher.hpp  FontAsset.hpp  HotReloadManager.hpp  ShaderAsset.hpp  SpriteAtlasAsset.hpp  TextureAsset.hpp
engine/include/limbo/audio/: AudioClip.hpp  AudioComponents.hpp  AudioEngine.hpp  AudioSource.hpp  AudioSystem.hpp
engine/include/limbo/core/: Assert.hpp  Base.hpp  FrameAllocator.hpp  MainThreadQueue.hpp  ThreadPool.hpp  Time.hpp  Types.hpp  UUID.hpp
engine/include/limbo/debug/: Debug.hpp  GPUTimer.hpp  Log.hpp  Profiler.hpp  Validation.hpp
engine/include/limbo/ecs/: Components.hpp  DeferredDestruction.hpp  Entity.hpp  Hierarchy.hpp  System.hpp  World.hpp
engine/include/limbo/ecs/systems/: SpriteRenderSystem.hpp
engine/include/limbo/graphics/: Framebuffer.hpp
engine/include/limbo/imgui/: DebugPanels.hpp  ImGuiLayer.hpp
engine/include/limbo/input/: InputManager.hpp
engine/include/limbo/particles/: ParticleComponents.hpp  ParticleRenderSystem.hpp  ParticleSystem.hpp
engine/include/limbo/physics/: Physics2D.hpp  PhysicsComponents.hpp  PhysicsSystem.hpp
engine/include/limbo/physics/2d/: ContactListener2D.hpp  Physics2D.hpp  PhysicsDebug2D.hpp  PhysicsSystem2D.hpp
engine/include/limbo/physics/3d/: Physics3D.hpp  PhysicsComponents3D.hpp  PhysicsSystem3D.hpp
engine/include/limbo/platform/: Input.hpp  Platform.hpp
engine/include/limbo/render/: Buffer.hpp  Camera.hpp  RenderContext.hpp  Renderer2D.hpp  Shader.hpp  Texture.hpp
engine/include/limbo/render/2d/: Font.hpp  Renderer2D.hpp  SpriteAtlas.hpp  SpriteAtlasBuilder.hpp  SpriteMaterial.hpp  TextRenderer.hpp
engine/include/limbo/render/3d/: Components3D.hpp  Lighting.hpp  Material.hpp  Mesh.hpp  Model.hpp  (+1 more)
engine/include/limbo/runtime/: Application.hpp
engine/include/limbo/scene/: Prefab.hpp  Scene.hpp  SceneSerializer.hpp  SchemaMigration.hpp
engine/include/limbo/scripting/: ScriptComponent.hpp  ScriptEngine.hpp  ScriptHotReloadManager.hpp  ScriptSystem.hpp
engine/include/limbo/tilemap/: Tilemap.hpp  TilemapComponent.hpp  TilemapRenderer.hpp  Tileset.hpp
engine/include/limbo/ui/: UICanvas.hpp  Widget.hpp  Widgets.hpp
engine/include/limbo/util/: FileIO.hpp
engine/src/animation/: Animation.cpp  AnimationSystem.cpp  SpriteSheet.cpp
engine/src/assets/: AssetId.cpp  AssetImporter.cpp  AssetLoader.cpp  AssetManager.cpp  AssetRegistry.cpp  AudioAsset.cpp  FileWatcher.cpp  FontAsset.cpp  HotReloadManager.cpp  ShaderAsset.cpp  SpriteAtlasAsset.cpp  TextureAsset.cpp
engine/src/audio/: AudioEngine.cpp  AudioSystem.cpp
engine/src/core/: FrameAllocator.cpp  MainThreadQueue.cpp  ThreadPool.cpp  Time.cpp  Types.cpp  UUID.cpp
engine/src/debug/: Debug.cpp  GPUTimer.cpp  Log.cpp  Profiler.cpp
engine/src/ecs/: DeferredDestruction.cpp  Hierarchy.cpp  System.cpp  World.cpp
engine/src/ecs/systems/: SpriteRenderSystem.cpp
engine/src/graphics/: Framebuffer.cpp
engine/src/imgui/: DebugPanels.cpp  ImGuiLayer.cpp
engine/src/input/: InputManager.cpp
engine/src/particles/: ParticleRenderSystem.cpp  ParticleSystem.cpp
engine/src/physics/: Physics2D.cpp  PhysicsSystem.cpp
engine/src/physics/2d/: ContactListener2D.cpp  Physics2D.cpp  PhysicsDebug2D.cpp  PhysicsSystem2D.cpp
engine/src/platform/: Input.cpp  Platform.cpp
engine/src/render/: Buffer.cpp  Camera.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp
engine/src/render/2d/: Font.cpp  Renderer2D.cpp  SpriteAtlas.cpp  SpriteAtlasBuilder.cpp  SpriteMaterial.cpp  TextRenderer.cpp
engine/src/render/api/: RenderContext.cpp
engine/src/render/common/: Buffer.cpp  Camera.cpp  Shader.cpp  Texture.cpp
engine/src/render/opengl/: OpenGLContext.cpp
engine/src/runtime/: Application.cpp
engine/src/scene/: Prefab.cpp  Scene.cpp  SceneSerializer.cpp  SchemaMigration.cpp
engine/src/scripting/: ScriptEngine.cpp  ScriptHotReloadManager.cpp  ScriptSystem.cpp
engine/src/tilemap/: Tilemap.cpp  TilemapRenderer.cpp  Tileset.cpp
engine/src/ui/: UICanvas.cpp  Widget.cpp  Widgets.cpp
engine/src/util/: FileIO.cpp
tests/: CMakeLists.txt  test_events.cpp  test_logger.cpp  test_main.cpp
tests/assets/: test_hot_reload.cpp
tests/core/: test_asset_id.cpp  test_thread_pool.cpp  test_types.cpp
tests/ecs/: test_hierarchy.cpp  test_world.cpp
tests/editor/: test_save_dialog.cpp
tests/math/: test_transform.cpp
tests/physics/: test_physics2d.cpp  test_physics_system.cpp
tests/render/: test_camera.cpp  test_sprite_atlas.cpp
tests/scene/: test_prefab.cpp  test_serialization.cpp
tests/scripting/: test_scripting.cpp
tests/util/: test_file_io.cpp
tools/assetcooker/: CMakeLists.txt  main.cpp
(+95 files in other folders)
